# snipeit-mcp

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.py
scripts/: setup-snipeit-mcp.sh  update-snipeit-mcp.sh
src/snipeit_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  logging_config.py  mcp_server.py  schemas.py
src/snipeit_mcp/tools/: __init__.py  assets.py  custom_fields.py  foundational.py  imports.py  inventory.py  licenses.py  people.py  reports.py  system.py
tests/: conftest.py  test_admin.py  test_assets.py  test_auth.py  test_configuration.py  test_core.py  test_custom_fields.py  test_error_handling.py  test_file_transfers.py  test_inventory.py  test_licensing.py  test_models.py  test_users_org.py
