[project]
name = "snipeit-mcp"
version = "1.6.0"
description = "MCP server for Snipe-IT inventory management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "snipeit", "inventory", "asset-management", "ai"]
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "requests>=2.31.0",
    "snipeit-api @ git+https://github.com/lfctech/snipeit-python-api@main",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "responses>=0.23.0"]

[project.urls]
Homepage = "https://github.com/jameshgordy/snipeit-mcp"
Repository = "https://github.com/jameshgordy/snipeit-mcp"
Issues = "https://github.com/jameshgordy/snipeit-mcp/issues"

[project.scripts]
snipeit-mcp = "snipeit_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
asyncio_mode = "auto"
